--- a/pollPage.html
+++ b/pollPage.html
@@ -178,6 +178,19 @@
 
                     <div class="form-group">
                         <div class="col-md-11">
+                            <select class="form-control w3-margin" required name="shops"
+                                    id="poll-form-shopKinds-inp"
+                                    style="height:40px; background-color:#F2F2F2">
+                                <option class="placeholder" selected disabled hidden value="" >فروشگاه</option>
+                                <option value="" disabled ></option>
+                                <!--need a for to read shop types from db-->
+                                <option value="" id="poll-form-shopKinds-lastOp-op" disabled ></option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-11">
                             <input type="tel" required name="phoneNumber" value=""
                                    class="form-control w3-margin"
                                    id="poll-form-phoneNumber-inp"
@@ -190,7 +203,7 @@
                     <div class="form-group">
                         <div class="col-md-offset-5 col-md-11">
                             <input type="submit" value="ارسال نظرسنجی" class="btn btn-default btnColors"
-                                   id="poll-form-submit-btn" />
+                                   id="poll-form-submit-btn" disabled="disabled"/>
                         </div>
                     </div>
 
@@ -281,6 +294,24 @@
 
 
             /*
+            Function to disable button if form is not valid
+             */
+            var $requiredInputs = $("#poll-form").find("input:required");
+            $requiredInputs.keyup(function () {
+                var empty_test = false;
+                $requiredInputs.each(function () {
+                    if($(this).val()==='')
+                        empty_test = true;
+                });
+
+                if(empty_test === true)
+                    $("#poll-form-submit-btn").attr("disabled", "disabled");
+                else {
+                    $("#poll-form-submit-btn").removeAttr("disabled");
+                }
+            });
+
+            /*
              Request for logout
              send authorization in header
              */
@@ -325,74 +356,61 @@
 
         $(document).ready( function () {
 
-            //اوردن فروشگاه ها
+            const poll_form_var = document.getElementById("poll-form");
+
+            /*
+            Reading from session "shops" and filled the shopKind selector sub myShops
+            */
+            if (typeof (window.sessionStorage.shops) !== "undefined") {
+
+                var shop_var = JSON.parse(window.sessionStorage.shops);
+                for (let val of shop_var) {
+                    const op = document.createElement("option");
+                    const opText = document.createTextNode(val.name);
+                    const myShops = document.getElementById("poll-form-shopKinds-inp");
+                    const lastOp = document.getElementById("poll-form-shopKinds-lastOp-op");
+                    op.value = val.id;
+                    op.appendChild(opText);
+                    myShops.insertBefore(op,lastOp);
+                }
+            }
+
 
             $("#poll-form").submit(function (e) {
                 e.preventDefault();
 
+                var poll_formData = new FormData();
+                poll_formData.append("phone_number", poll_form_var.phoneNumber.value);
+                poll_formData.append("shop", poll_form_var.shops.value);
 
-                    $.get("address.txt", function (data) {
+                $.get("address.txt", function (data) {
 
-                        const my_address = data + "/poll-to-customer/";
-                        //فروشگاه را انتخاب کن
-                        $.ajax({
-                            type: 'POST',
-                            dataType: 'json',
-                            contentType: 'application/json',
-                            url: my_address,
-                            data: JSON.stringify({
-                                phone_number : $("#poll-form-phoneNumber-inp"),
-                                shop : "?"
-                            }),
-                            success: function(resultData, status, xhr){
-                                alert(resultData.message);
-                                if (resultData.result.toString() === "true") {
-                                    // window.location.href="pollPage.html";
-                                    window.location.reload();
-                                }
-                            },
-                            error: function () {
-                                alert(" اتصال به اینترنت برقرار نیست. ");}
-                        })
+                    const my_address = data + "/salesman/poll-to-customer/";
 
-                    });
-
-            });
-
-            /*
-             Request for logout
-             send authorization in header
-             */
-            $("#logout").click(function () {
-                var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
-                if (logout_var ==true){
-                    $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/logout/";
-                        $.ajax({
-                            type: 'POST',
-                            dataType: 'json',
-                            contentType: 'application/json',
-                            url: my_address,
-                            headers:{
-                                'Authorization' : window.sessionStorage.token
-                            },
-                            data: JSON.stringify({}),
-                            success: function (resultData, status, xhr) {
-                                alert(resultData.message);
-                                if (resultData.result.toString() === "true") {
-                                    window.location.href="HomePage.html";
-                                }
-                            },
-                            error: function () {
-                                alert(" اتصال به اینترنت برقرار نیست. ");
+                    $.ajax({
+                        type: 'POST',
+                        url: my_address,
+                        dataType: 'json',
+                        contentType: false,
+                        processData: false,
+                        crossDomain: true,
+                        headers: {
+                            'Authorization': window.sessionStorage.token
+                        },
+                        data: poll_formData,
+                        success: function(resultData, status, xhr){
+                            alert(resultData.message);
+                            if (resultData.result.toString() === "true") {
+                                // window.location.href="advertisementPage.html";
+                                // window.location.reload();
                             }
-                        })
+                        },
+                        error: function () {
+                            alert(" اتصال به اینترنت برقرار نیست. ");}
+                    })
 
-                    });
+                });
 
-                }else{
-                    alert(" از این که همراه ما خواهید بود متشکریم. ");
-                }
             });
 
 
