--- a/showDiscount.html
+++ b/showDiscount.html
@@ -100,14 +100,14 @@
             </div>
             <br/>
             <div class="rightMenuColor">
-                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
-                                                         style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
+                <a href="showPoll.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
+                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
                     من </a>
             </div>
             <br/>
             <div class="rightMenuColor">
-                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
-                                                         style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من
+                <a href="showDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
+                                                                         style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من
                 </a>
             </div>
             <br/>
@@ -124,8 +124,8 @@
             </div>
             <br/>
             <div class="rightMenuColor">
-                <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
-                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
+                <a class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
+                                                            style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
                 </a>
             </div>
             <br/>
