--- a/AdminMainPage.html
+++ b/AdminMainPage.html
@@ -66,8 +66,8 @@
     <div class="w3-margin ">
         <div class="w3-center " style="margin-top:8px !important">
             <img  class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
-                 id="admin-img"
-                 style="width:100px ; height:100px"/>
+                  id="admin-img"
+                  style="width:100px ; height:100px"/>
         </div>
         <br/>
         <a href="editProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
@@ -83,14 +83,14 @@
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
-                                                                  style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
+            <a href="showPoll.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
+                                                                 style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
                 من </a>
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
-                                                                  style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من
+            <a href="showDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
+                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من
             </a>
         </div>
         <br/>
@@ -102,13 +102,13 @@
         <br/>
         <div class="rightMenuColor">
             <a href="supportPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone"
-                                                                  style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی
+                                                                    style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی
             </a>
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a href="#" class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
-                                                                  style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
+            <a class="rightMenuColor" id="logout"><span class="glyphicon glyphicon-off"
+                                                        style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
             </a>
         </div>
         <br/>
